# keycloak-inviter

./: Cargo.toml  flake.nix
backend/: Cargo.toml  config.toml
backend/src/: config.rs  main.rs  oidc.rs  web.rs  web_handler.rs
frontend/: .env.production  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  index.css  main.ts
frontend/src/components/: LoginButton.vue  NavBar.vue  PageContainer.vue
frontend/src/components/ui/button/: Button.vue  index.ts
frontend/src/components/ui/form/: FormItem.vue  FormLabel.vue  FormMessage.vue  useFormField.ts
frontend/src/components/ui/label/: Label.vue
frontend/src/lib/: fetching.ts  network.ts  types.ts
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  InviteOrLoginView.vue  InviteView.vue  LoginView.vue  RegisterView.vue
src/: main.rs  web.rs  web_handler.rs
