[package]
name = "oidc-fun"
version = "0.1.0"
edition = "2024"

[dependencies]
openidconnect = "4.0.0"
tokio = { version = "1.44.2", features = ["full"] }
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.41"
reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }
snafu = { version = "0.8.5", features = ["std", "futures"] }
oauth2 = "5.0.0"
axum = { version = "0.8.3", features = ["macros", "ws"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
keycloak = "26.2.0"
toml = "0.8.20"
clap = { version = "4.5.37", features = ["derive"] }
